--- a/TesteInicialGab/TesteInicialGab.vcxproj.filters
+++ b/TesteInicialGab/TesteInicialGab.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="GlutTrabalhoM1_2.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="LeituraDeArquivos.cpp">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
