Adicionado arquivo de iluminação

--- a/TesteInicialGab/TesteInicialGab.vcxproj.filters
+++ b/TesteInicialGab/TesteInicialGab.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="LeituraDeArquivos.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="Iluminacao.cpp">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
