Adicionado novo main.cpp

--- a/TesteInicialGab/TesteInicialGab.vcxproj.filters
+++ b/TesteInicialGab/TesteInicialGab.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="Iluminacao.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="mainNovo.cpp">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
