--- a/TesteInicialGab/TesteInicialGab.vcxproj
+++ b/TesteInicialGab/TesteInicialGab.vcxproj
@@ -148,7 +148,12 @@
     <ClCompile Include="LeituraDeArquivos.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Iluminacao|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='LeituradeArquivos|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="mainNovo.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Iluminacao|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='LeituradeArquivos|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
